--- a/com.mzeat/AndroidManifest.xml
+++ b/com.mzeat/AndroidManifest.xml
@@ -101,6 +101,10 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
+            android:name="com.mzeat.ui.OrderConfirmActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
             android:name="com.mzeat.ui.MessageActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
